# libosmo-netif

./: .gitignore  Doxyfile.in  Makefile.am  README.md  TODO-RELEASE  configure.ac  libosmo-netif.pc.in  libosmonetif.pc.in
contrib/: jenkins.sh  libosmo-netif.spec  libosmo-netif.spec.in
debian/: changelog  control  copyright  libosmonetif1.install  rules
doc/manuals/: Makefile.am  twrtp-guide-docinfo.xml  twrtp-guide.adoc
doc/twrtp/: README  twrtp-guide.t
examples/: Makefile.am  ipa-stream-client.c  ipa-stream-server.c  lapd-over-datagram-network.c  lapd-over-datagram-user.c  lapd-over-stream-client.c  lapd-over-stream-server.c  osmux-test-input.c  osmux-test-output.c  rs232-read.c  rs232-write.c  rtp-udp-test-client.c  rtp-udp-test-server.c  stream-client.c  stream-server.c  udp-test-client.c  udp-test-server.c  udp-test.h
examples/channel/: Makefile.am  abis_ipa_client.c  abis_ipa_server.c  abis_ipa_stream_client.c  abis_ipa_stream_server.c
include/osmocom/netif/: Makefile.am  amr.h  channel.h  datagram.h  icmpv6.h  ip_checksum.h  ipa.h  ipa_unit.h  jibuf.h  osmux.h  prim.h  rtcp_defs.h  rtp.h  sctp.h  stream.h  stream_private.h  twjit.h  twjit_private.h  twrtp.h  twrtp_private.h  version.h.tpl
include/osmocom/netif/channel/: Makefile.am  abis_ipa_client.h  abis_ipa_server.h
src/: Makefile.am  amr.c  channel.c  datagram.c  icmpv6.c  ip_checksum.c  ipa.c  ipa_keepalive.c  ipa_unit.c  jibuf.c  osmux.c  osmux_input.c  osmux_output.c  prim.c  rs232.c  rtp.c  sctp.c  stream.c  stream_cli.c  stream_srv.c  twjit.c  twjit_conf.c  twjit_in.c  twjit_out.c  twjit_vty.c  twrtp.c  twrtp_base.c  twrtp_bind.c  twrtp_misc.c  twrtp_remote.c  twrtp_rtcp_rx.c  twrtp_rtcp_tx.c  twrtp_rtp_rx.c  twrtp_rtp_tx.c  twrtp_twjit.c
src/channel/: Makefile.am  abis_ipa_client.c  abis_ipa_server.c
src/channel/abis/: Makefile.am  ipa_stream_client.c  ipa_stream_server.c
tests/: Makefile.am  testsuite.at
tests/amr/: amr_test.c  amr_test.ok
tests/jibuf/: jibuf_test.c  jibuf_test.ok  jibuf_tool.c  jitter.plt  seq.plt
tests/osmo-pcap-test/: Make_global.am  Makefile.am  configure.ac  l2_eth.c  l2_sll.c  l3_ipv4.c  l4_tcp.c  l4_udp.c  main.c  osmo_pcap.h  osmux_test.c  pcap.c  proto.c  proto.h
tests/osmux/: osmux_input_test.c  osmux_input_test.ok  osmux_output_test.c  osmux_output_test.ok  osmux_test.c  osmux_test.ok  osmux_test2.c  osmux_test2.ok
tests/stream/: stream_test.c  stream_test.err  stream_test.ok
utils/: Makefile.am  osmo-amr-inspect.c
