noinst_HEADERS = \
	stream_private.h \
	twjit_private.h \
	$(NULL)

osmonetif_HEADERS = amr.h		\
		    datagram.h		\
		    ipa.h		\
		    ipa_unit.h		\
		    jibuf.h		\
		    osmux.h		\
		    prim.h		\
		    rs232.h		\
		    rtp.h		\
		    stream.h		\
		    twjit.h		\
		    $(NULL)

if ENABLE_LIBSCTP
osmonetif_HEADERS += sctp.h
endif

osmonetifdir = $(includedir)/osmocom/netif
